<resources>
    <string name="app_name">Softphone</string>
    <string name="search">Tìm kiếm</string>
    <string name="username_or_email">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="mute">Tắt âm</string>
    <string name="keypad">Bàn phím</string>
    <string name="speaker">Loa</string>
    <string name="recents">Lịch sử</string>
    <string name="contacts">Danh bạ</string>
    <string name="settings">Cài đặt</string>
    <string name="hide">Ẩn</string>
    <string name="input_invalid">Số điện thoại không được để trống. Vui lòng thử lại.</string>
    <string name="username_invalid">Số điện thoại không được chứa dấu cách. Vui lòng thử lại.</string>
    <string name="domain_invalid">Tên miền không được chứa dấu cách. Vui lòng thử lại.</string>
    <string name="executing">Đang thực hiện...</string>
    <string name="login_error">Số điện thoại hoặc mật khẩu không chính xác. Vui lòng thử lại.</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="email_or_phone">Email</string>
    <string name="enter_phone_email_to_reset_password">Vui lòng nhập email để lấy lại mật khẩu</string>
    <string name="ok">OK</string>
    <string name="error_occured">Có lỗi xảy ra. Vui lòng thử lại.</string>
    <string name="reset_pass_success">Khôi phục mật khẩu thành công. Vui lòng kiểm tra email của bạn để lấy mật khẩu mới.</string>
    <string name="contact_detail">Thông tin chi tiết</string>
    <string name="company_contact">Danh bạ công ty</string>
    <string name="personal_contact">Danh bạ cá nhân</string>
    <string name="monday">Thứ hai</string>
    <string name="tuesday">Thứ ba</string>
    <string name="wednesday">Thứ tư</string>
    <string name="thursday">Thứ năm</string>
    <string name="friday">Thứ sáu</string>
    <string name="saturday">Thứ bảy</string>
    <string name="sunday">Chủ nhật</string>
    <string name="yesterday">Hôm qua</string>
    <string name="today">Hôm nay</string>
    <string name="no_recents">Không có lịch sử</string>
    <string name="busy">Máy bận</string>
    <string name="call_starting">Đang bắt đầu...</string>
    <string name="ringing">Đang đổ chuông</string>
    <string name="calling">Đang gọi...</string>
    <string name="pull_to_refresh">Kéo để cập nhật...</string>
    <string name="release_to_refresh">Thả để cập nhật...</string>
    <string name="updating">Đang cập nhật...</string>
    <string name="logout">Đăng xuất</string>
    <string name="cancel">Hủy</string>
    <string name="logout_confirm">Bạn có chắc chắn muốn đăng xuất?</string>
    <string name="user_info">Thông tin khách hàng</string>
    <string name="enter_info">Thông tin</string>
    <string name="incoming">Cuộc gọi đến</string>
    <string name="call_ended">Cuộc gọi đã kết thúc</string>
    <string name="online_offline">Trực tuyến/Ngoại tuyến</string>
    <string name="information">Thông tin</string>
    <string name="support">Hỗ trợ</string>
    <string name="domain">Tên miền</string>
    <string name="network_problem">Lỗi kết nối. Vui lòng kiểm tra lại kết nối.</string>
    <string name="other">Khác</string>
    <string name="missed_call">Cuộc gọi nhỡ</string>
    <string name="phone_missing">Người dùng này không có số điện thoại.</string>
    <string name="ongoing_call">Đang trong cuộc gọi Softphone</string>
    <string name="app_info">Phiên bản ứng dụng</string>
    <string name="recording_required">Bạn cần cấp quyền để thực hiện cuộc gọi</string>
    <string name="send_sms">Gửi tin nhắn</string>
    <string name="call_phone_required">Bạn cần cấp quyền gọi điện để thực hiện cuộc gọi</string>
    <string name="network_required">Thiết bị của bạn hiện không có kết nối mạng. Vui lòng kiểm tra lại kết nối và thử gọi lại.</string>
    <string name="softphone_connecting">Đang kết nối...</string>
    <string name="softphone_connected">Đã kết nối</string>
    <string name="view_info">Xem thông tin</string>
    <string name="change_device">Bạn có muốn đổi thiết bị tiếp nhận cuộc gọi?</string>
    <string name="video_call">Gọi video miễn phí</string>
    <string name="do_not_have_acc">Bạn chưa có tài khoản?</string>
    <string name="signup">Đăng ký</string>
    <string name="enter_code">Nhập mã kích hoạt</string>
    <string name="code_sent_to">Mã kích hoạt đã được gửi đến số %1$s</string>
    <string name="phone_confirm">Đây có đúng là số điện thoại của bạn?\n\n%1$s\n\nMột tin nhắn chứa mã truy cập sẽ được gửi đến số này.</string>
    <string name="yes">Đúng</string>
    <string name="no">Không</string>
    <string name="free_call">Gọi thoại miễn phí</string>
    <string name="call_out">Call out</string>
    <string name="stringee_not_connect">Chưa kết nối tới máy chủ. Vui lòng chờ ứng dụng kết nối đến máy chủ thành công.</string>
    <string name="sip_trunk_number">Đầu số</string>
    <string name="video">Video</string>
    <string name="msg_handled_on_another_device">Cuộc gọi đã được trả lời trên một thiết bị khác.</string>
    <string name="balance">Số dư tài khoản</string>
</resources>
