<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/v_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_theme">

    <FrameLayout
        android:id="@+id/v_remote"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/v_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/calling"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/im_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>


    <ImageButton
        android:id="@+id/btn_switch"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/v_top"
        android:layout_margin="20dp"
        android:background="@drawable/item_selectable"
        android:src="@drawable/ic_video_switch_light_normal"
        android:visibility="invisible" />

    <FrameLayout
        android:id="@+id/v_local"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/v_top"
        android:layout_margin="20dp" />

    <LinearLayout
        android:id="@+id/v_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_25"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_end_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_end_call_selector" />

    <LinearLayout
        android:id="@+id/v_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_end_call"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_mute"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:src="@drawable/ic_mute_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mute"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/v_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_video"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:src="@drawable/ic_video_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/v_dial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_dial"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:src="@drawable/dial" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keypad"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_speaker"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:src="@drawable/ic_speaker_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speaker"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/v_dialing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

    <View
        android:id="@+id/v_black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff000000"
        android:visibility="gone" />

</RelativeLayout>