<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingLeft="20dp">

        <LinearLayout
            android:id="@+id/v_voice_call"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/white_selectable"
            android:gravity="center_vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:src="@drawable/contact_phone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/free_call"
                    android:textColor="@color/text_normal"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/separator" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/v_call_out"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/white_selectable"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:src="@drawable/contact_phone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/call_out"
                    android:textColor="@color/text_normal"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/v_video_call"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/white_selectable"
            android:gravity="center_vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:src="@drawable/contact_phone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/separator" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/video_call"
                    android:textColor="@color/text_normal"
                    android:textSize="16sp" />


            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/separator" />
</LinearLayout>