<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/separator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:paddingLeft="30dp">

            <com.stringee.softphone.view.CircleImageView
                android:id="@+id/im_avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/avatar_default" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_normal"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/text_sub"
                    android:textSize="@dimen/text_size_14"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/separator" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/separator" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:padding="10dp"
            android:text="@string/sip_trunk_number"
            android:textColor="@color/text_normal"
            android:textSize="@dimen/text_size_16" />

        <ListView
            android:id="@+id/lv_numbers"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#ffffff"
            android:divider="@null"
            android:dividerHeight="0dp"></ListView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/separator" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/white_selectable"
            android:paddingLeft="10dp"
            android:paddingRight="5dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/app_info"
                android:textColor="@color/text_normal"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/text_sub"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/separator" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/separator" />

        <LinearLayout
            android:id="@+id/v_logout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/white_selectable"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/logout"
                android:textColor="#dd2222"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/separator" />

    </LinearLayout>
</ScrollView>